feat(doc): #3596.3 add pci refs to some rules
- Added PCI DSS references to R158, R169, R173, R050, R321,
R117, R037, R160 and R344
- Updated R158, R050, R321, R117, R037, R160, R344 and R169
keywords


Former-commit-id: cce10d3e46523ff9aea8960ac0ad30163d61933a

--- a/content/pages/rules/architecture/050/index.adoc
+++ b/content/pages/rules/architecture/050/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/050/
 :category: architecture
 :description: This requirement establishes the importance of controlling the calls to interpreted code in order to avoid malicious code injections.
-:keywords: Code, System, ASVS, CWE, Interpreted, JavaScript, Rules, Ethical Hacking, Pentesting
+:keywords: Code, System, ASVS, CWE, PCI DSS, Interpreted, JavaScript, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R050. Control calls to interpreted code
@@ -80,3 +80,9 @@ Verify that the application does not include and execute functionality from
 untrusted sources,
 such as unverified content distribution networks, *JavaScript* libraries,
 or **node npm** libraries.
+
+. [[r10]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.1]
+Address common coding vulnerabilities in software-development processes such as
+injection flaws, particularly *SQL* injection.
+Also consider *OS* Command Injection, *LDAP* and *XPath* injection flaws as
+well as other injection flaws.
