--- a/content/pages/rules/emails/117/index.adoc
+++ b/content/pages/rules/emails/117/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/117/
 :category: emails
 :description: This requirement establishes the importance of avoiding the interpretation and execution of HTML code in business emails.
-:keywords: HTML, Email, Business, Security, Requirement, Code injection, Rules, Ethical Hacking, Pentesting
+:keywords: HTML, Email, Business, Security, Requirement, Code injection, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R117. Do not interpret HTML code
@@ -23,3 +23,9 @@ occur when untrusted data is sent to an interpreter as part of a command or
 query.
 The attacker’s hostile data can trick the interpreter into executing unintended
 commands or accessing data without proper authorization.
+
+. [[r2]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.1]
+Address common coding vulnerabilities in software-development processes such as
+injection flaws, particularly *SQL* injection.
+Also consider *OS* Command Injection, *LDAP* and *XPath* injection flaws as
+well as other injection flaws.
