skims\feat(back): #2284.183 f085 check
Former-commit-id: d1dd72bf200bcd944f8a8e04e1dbb332ab4d863c

--- a/skims/static/translations/findings/f085.yaml
+++ b/skims/static/translations/findings/f085.yaml
@@ -1,3 +1,6 @@
+src.lib_path.f085.client_storage.description:
+  en: Sensitive information storage in {path}
+  es: Almacenamiento de información sensible en {path}
 utils.model.finding.enum.f085.description:
   en: >
     The application stores sensitive information in the client-side storage
