--- a/content/pages/rules/cryptography/145/index.adoc
+++ b/content/pages/rules/cryptography/145/index.adoc
@@ -132,3 +132,7 @@ cryptographic keys including secure cryptographic key storage.
 Fully document and implement all key-management processes and procedures for
 cryptographic keys including prevention of unauthorized substitution of
 cryptographic keys.
+
+. [[r22]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.3]
+Address common coding vulnerabilities in software-development processes such as
+insecure cryptographic storage.
