--- a/content/pages/rules/source/161/index.adoc
+++ b/content/pages/rules/source/161/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/161/
 :category: source
 :description: This requirement establishes the importance of defining secure default options to avoid unexpected behaviors in the application.
-:keywords: Default, Source Code, Conditional, Programming, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Default, Source Code, Conditional, Programming, ASVS, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R161. Define secure default options
@@ -103,3 +103,7 @@ codebase to account for expected and unexpected error conditions.
 V7.4 Error Handling.(7.4.3)]
 Verify that a "last resort" error handler is defined which will catch all
 unhandled exceptions.
+
+. [[r10]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.5]
+Address common coding vulnerabilities in software-development processes such as
+improper error handling.
