--- a/content/blog/hack-cern/index.adoc
+++ b/content/blog/hack-cern/index.adoc
@@ -4,7 +4,7 @@
 :category: interview
 :tags: security, machine learning, testing
 :image: cover.png
-:alt: Purple and pink plasma ball on Unsplash: https://unsplash.com/photos/jM6Y2nhsAtk
+:alt: Photo by Aurélien Clément Ducret on Unsplash
 :description: For this post, we spoke with Andrés Gómez, a former Fluid Attacks' member, who is researching to protect a computer grid supporting experiments at the LHC.
 :keywords: CERN, Hacking, Security, Interview, LHC, Machine Learning, Pentesting, Ethical Hacking
 :author: Julian Arango
@@ -12,7 +12,7 @@
 :name: Julian Arango
 :about1: Behavioral strategist
 :about2: Data scientist in training.
-:source: https://unsplash.com/photos/jM6Y2nhsAtk
+:source: https://unsplash.com/photos/Cm8n6CIMZnY
 
 = Preventing Hacks at CERN
 
@@ -210,6 +210,4 @@ Thank you, Andrés!
 == References
 
 . [[r1]] link:https://arxiv.org/abs/1801.04179[Ramirez, A. G., Lara, C., Betev, L., Bilanovic, D.
-, & Kebschull, U. (2018).
-Arhuaco: Deep Learning and Isolation Based Security
-for Distributed High-Throughput Computing. arXiv preprint arXiv:1801.04179.]
+, & Kebschull, U. (2018).]
