--- a/content/blog/parse-conquer/index.adoc
+++ b/content/blog/parse-conquer/index.adoc
@@ -4,7 +4,7 @@
 :category: attacks
 :tags: software, security, code
 :image: cover.png
-:alt: Parsing code. Photo by Markus Spiske on Unsplash: https://unsplash.com/photos/hvSr_CVecVI
+:alt: Photo by Markus Spiske on Unsplash
 :description: For this blog post, we rely on the following question: Why does Asserts use parser combinators as its main static code analysis tool?
 :keywords: Parsing, Asserts, Combinators, Regex, Vulnerability, Pyparsing, Ethical Hacking, Pentesting
 :author: Rafael Ballestas
@@ -12,7 +12,7 @@
 :name: Rafael Ballestas
 :about1: Mathematician
 :about2: with an itch for CS
-:source: https://unsplash.com/photos/hvSr_CVecVI
+:source: https://unsplash.com/photos/qjnAnF0jIGk
 
 
 = Parse and Conquer
