--- a/content/pages/rules/architecture/050/index.adoc
+++ b/content/pages/rules/architecture/050/index.adoc
@@ -86,3 +86,7 @@ Address common coding vulnerabilities in software-development processes such as
 injection flaws, particularly *SQL* injection.
 Also consider *OS* Command Injection, *LDAP* and *XPath* injection flaws as
 well as other injection flaws.
+
+. [[r11]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.7]
+Address common coding vulnerabilities in software-development processes such as
+cross-site scripting (*XSS*).
