--- a/content/pages/rules/architecture/266/index.adoc
+++ b/content/pages/rules/architecture/266/index.adoc
@@ -138,3 +138,9 @@ as required for the function of the system.
 . [[r16]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 2.2.5]
 Remove all unnecessary functionality, such as scripts, drivers, features,
 subsystems, file systems, and unnecessary web servers.
+
+. [[r17]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
+Address common coding vulnerabilities in software-development processes
+including improper access control
+(such as insecure direct object references, failure to restrict URL access,
+directory traversal, and failure to restrict user access to functions).
