--- a/content/pages/rules/architecture/320/index.adoc
+++ b/content/pages/rules/architecture/320/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/320/
 :category: architecture
 :description: This requirement establishes the importance of enforcing access control on the server's side instead of on the client's.
-:keywords: Control Enforcement, Client, Server, Access, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Control Enforcement, Client, Server, Access, ASVS, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R320. Avoid client-side control enforcement
@@ -126,3 +126,9 @@ V14.5 Validate HTTP Request Header Requirements.(14.5.2)]
 Verify that the supplied *Origin* header is not used for authentication or
 access control decisions,
 as the *Origin* header can easily be changed by an attacker.
+
+. [[r17]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
+Address common coding vulnerabilities in software-development processes
+including improper access control
+(such as insecure direct object references, failure to restrict URL access,
+directory traversal, and failure to restrict user access to functions).
