--- a/content/pages/rules/authorization/033/index.adoc
+++ b/content/pages/rules/authorization/033/index.adoc
@@ -92,3 +92,9 @@ Secure and synchronize router configuration files.
 Place system components that store cardholder data (such as a database) in an
 internal network zone,
 segregated from the *DMZ* and other untrusted networks.
+
+. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
+Address common coding vulnerabilities in software-development processes
+including improper access control
+(such as insecure direct object references, failure to restrict URL access,
+directory traversal, and failure to restrict user access to functions).
