--- a/content/pages/rules/authorization/035/index.adoc
+++ b/content/pages/rules/authorization/035/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/035/
 :category: authorization
 :description: This requirement aims to define the importance of implementing measures to prevent system actors from increasing privileges for themselves.
-:keywords: System, Privileges, Modification, Administration, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: System, Privileges, Modification, Administration, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R035. Manage privilege modifications
@@ -70,3 +70,9 @@ This implies protection against spoofing and elevation of privilege.
 V13.1 Generic Web Service Security Verification Requirements.(13.1.2)]
 Verify that access to administration and management functions is limited to
 authorized administrators.
+
+. [[r9]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
+Address common coding vulnerabilities in software-development processes
+including improper access control
+(such as insecure direct object references, failure to restrict URL access,
+directory traversal, and failure to restrict user access to functions).
