--- a/content/pages/rules/authorization/095/index.adoc
+++ b/content/pages/rules/authorization/095/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/095/
 :category: authorization
 :description: This requirement establishes the importance of defining the users with administrator or root privileges in the system.
-:keywords: Users, Privileges, Root, Administrator, ASVS, HIPAA, NIST, Rules, Ethical Hacking, Pentesting
+:keywords: Users, Privileges, Root, Administrator, ASVS, HIPAA, NIST, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R095. Define users with privileges
@@ -80,3 +80,9 @@ V4.1 General Access Control Design.(4.1.4)]
 Verify that the principle of deny by default exists whereby new users/roles
 start with minimal or no permissions and users/roles do not receive access to
 new features until access is explicitly assigned.
+
+. [[r11]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
+Address common coding vulnerabilities in software-development processes
+including improper access control
+(such as insecure direct object references, failure to restrict URL access,
+directory traversal, and failure to restrict user access to functions).
