--- a/content/pages/rules/authorization/341/index.adoc
+++ b/content/pages/rules/authorization/341/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/341/
 :category: authorization
 :description: This requirement establishes the importance of using the principle of deny by default when creating new users/roles or when adding new features.
-:keywords: Principle, Deny, Default, Permission, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Principle, Deny, Default, Permission, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R341. Use the principle of deny by default
@@ -59,3 +59,9 @@ party libraries to expose only the required behavior into the application.
 V14.5 Validate HTTP Request Header Requirements.(14.5.1)]
 Verify that the application server only accepts the *HTTP* methods in use by
 the application or *API*, including pre-flight *OPTIONS*.
+
+. [[r8]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
+Address common coding vulnerabilities in software-development processes
+including improper access control
+(such as insecure direct object references, failure to restrict URL access,
+directory traversal, and failure to restrict user access to functions).
