--- a/content/pages/rules/data/176/index.adoc
+++ b/content/pages/rules/data/176/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/176/
 :category: data
 :description: This requirement establishes the importance of restricting access to sensitive information to authorized users only.
-:keywords: Data, Authorization, Restriction, GDPR, ASVS, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Data, Authorization, Restriction, GDPR, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R176. Restrict system objects
@@ -134,3 +134,9 @@ Secure and synchronize router configuration files.
 Fully document and implement all key-management processes and procedures for
 cryptographic keys including prevention of unauthorized substitution of
 cryptographic keys.
+
+. [[r18]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
+Address common coding vulnerabilities in software-development processes
+including improper access control
+(such as insecure direct object references, failure to restrict URL access,
+directory traversal, and failure to restrict user access to functions).
