--- a/content/pages/rules/services/265/index.adoc
+++ b/content/pages/rules/services/265/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/265/
 :category: services
 :description: This requirement establishes the importance of restricting access to critical business processes, allowing only authorized users.
-:keywords: Users, Autorization, Critical Process, NIST, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Users, Autorization, Critical Process, NIST, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R265. Restrict access to critical processes
@@ -90,3 +90,9 @@ Verify that attribute or feature-based access control is used whereby the code
 checks the user's authorization for a feature/data item rather than just their
 role.
 Permissions should still be allocated using roles.
+
+. [[r12]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
+Address common coding vulnerabilities in software-development processes
+including improper access control
+(such as insecure direct object references, failure to restrict URL access,
+directory traversal, and failure to restrict user access to functions).
