--- a/content/pages/rules/system/186/index.adoc
+++ b/content/pages/rules/system/186/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/186/
 :category: system
 :description: This requirement establishes the importance of applying the principle of least privilege when accessing systems and assigning permissions.
-:keywords: Principle, Least, Privilege, NIST, ASVS, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Principle, Least, Privilege, NIST, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R186. Use the principle of least privilege
@@ -118,3 +118,9 @@ necessary.
 . [[r17]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 5.3]
 Ensure that anti-virus mechanisms are actively running and cannot be disabled
 or altered by users.
+
+. [[r18]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
+Address common coding vulnerabilities in software-development processes
+including improper access control
+(such as insecure direct object references, failure to restrict URL access,
+directory traversal, and failure to restrict user access to functions).
